# godot

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  backtest.py  backtest_run.py  bad_prior_compare.py  benchmark.py  estimators.py  eta.py  godot_logo.pxd  gpx.py  gradient_ratios.py  plot.py  plot_elevation.py  prek.toml  pyproject.toml  sanity_gpx.py  test.py  vflat_backtest.py
docs/: method_d.tex  preamble.tex
eta/: __init__.py  benchmark.py  estimators.py  fit.py  gpx.py  gradient.py  palettes.py  pause.py  plot.py  ride.py  segmentation.py  theme.py
godot/: __init__.py  benchmark.py  config.py  convert.py  estimators.py  fit.py  gpx.py  pause.py  pcs.py  plot.py  report.py  ride.py  ttg.py
scripts/: delta_distributions.py  gradient_curve.py  oracle_table.py  power_curve.py  power_decomposition.py  relevant_sweep.py
tests/: test_benchmark.py  test_estimators.py  test_gpx.py  test_naive.py  test_segments.py
